# API

./: .dockerignore  .gitignore  AGENTS.md  Makefile  README.md  config.toml  docker-compose.yml  monorepo-guards.toml
clients/DiscordBot/: .dockerignore  .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  make_check.out  mypy_errors.txt  mypy_output.txt  pyproject.toml  railway.toml
clients/DiscordBot/scripts/: __init__.py  docker-clean.ps1  docker-start.ps1  docker-stop.ps1  guard.py
clients/DiscordBot/tests/: conftest.py  test_guard_checks.py  test_modeltrainer_client.py  test_modeltrainer_client_edges.py  test_modeltrainer_client_error_field.py  test_modeltrainer_client_invalid_train_body.py  test_modeltrainer_client_message_default.py  test_modeltrainer_client_message_fallback_dict.py  test_modeltrainer_client_message_fallback_nondict.py  test_modeltrainer_client_status_types.py  test_modeltrainer_client_transport.py  test_trainer_cog.py  test_trainer_cog_branches.py  test_trainer_events.py  test_trainer_events_branches.py  test_trainer_events_invalid.py  test_trainer_events_more.py  test_trainer_notifier.py  test_trainer_notifier_failure.py  test_trainer_notifier_maybe_notify.py  test_trainer_notifier_run_loop.py  test_trainer_notifier_start_stop.py  test_turkic_notifier.py  test_turkic_notifier_cov.py  test_turkic_notifier_more.py
libs/instrument_io/: .gitignore  EXCEL_WRITER_COMPARISON.md  FILE_FORMAT_EXPANSION_PLAN.md  FORMATS.md  FaiolaLab_ChemicalInventory_Standards.md  Makefile  NOTEBOOK_STRUCTURE_GUIDE.md  README.md  check_pdf.py  check_sheets.py  consolidated_inspector.py  demo_all_writers.py  inspect_notebooks.py  inspect_potential_files.py  pyproject.toml  read_doc_with_instrument_io.py  test_notebook_readers.py
libs/instrument_io/demo_output/: demo_analysis_results.xlsx  demo_validation_report.docx
libs/instrument_io/scripts/: __init__.py  compare_inventory_standards.py  create_2021_inventory_excel.py  create_audit_excel.py  create_ghost_excel.py  extract_standards.py  generate_documentation_docx.py  guard.py  mock_ban_rule.py  scan_missing_data.py  update_inventory_source.py  verify_sheets.py
libs/instrument_io/tests/: conftest.py  test_decoders_agilent.py  test_decoders_csv.py  test_decoders_docx.py  test_decoders_excel.py  test_decoders_imzml.py  test_decoders_mat.py  test_decoders_mgf.py  test_decoders_mzml.py  test_decoders_pdf.py  test_decoders_pptx.py  test_decoders_smps.py  test_exceptions.py  test_guard_script.py  test_integration_agilent_reader.py  test_integration_csv_reader.py  test_integration_excel_reader.py  test_integration_imzml_reader.py  test_integration_mgf_reader.py  test_integration_mzml_comprehensive.py  test_integration_mzml_reader.py  test_integration_mzxml_reader.py  test_integration_pdf_reader.py  test_integration_thermo_reader.py  test_integration_waters_reader.py  test_json_bridge.py  test_mock_ban_rule.py  test_protocols_mgf.py  test_protocols_numpy.py  test_protocols_openpyxl.py  test_protocols_pdfplumber.py  test_protocols_polars.py  test_protocols_pyteomics.py  test_protocols_python_docx.py  test_protocols_reportlab.py  test_protocols_thermo.py  test_readers_agilent.py  test_readers_csv.py  test_readers_docx_integration.py  test_readers_excel.py  (+31 more)
libs/platform_discord/: README.md  pyproject.toml
libs/platform_discord/scripts/: guard.py
libs/platform_discord/tests/: conftest.py  test_bot_subscriber.py  test_discord_types.py  test_embed_helpers.py  test_exceptions_and_protocols.py  test_guard_checks.py  test_message_source.py  test_qr_embeds.py  test_rate_limiter.py  test_subscriber.py  test_task_runner.py  test_transcript_embeds.py
services/Model-Trainer/: .dockerignore  .env.example  .gitignore  DEPLOYING_RAILWAY.md  DESIGN.md  Dockerfile  Makefile  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  railway.toml
services/Model-Trainer/config/: app.toml
services/Model-Trainer/docs/: api.md
services/Model-Trainer/scripts/: __init__.py  guard.py
services/Model-Trainer/tests/: conftest.py  test_app_factory_startup.py  test_artifact_uploader_unit.py  test_artifacts_and_health_branches.py  test_auth_api_key_and_status_message.py  test_bpe_backend_edges.py  test_char_backend_unit.py  test_char_lstm_prepare_train_eval.py  test_char_lstm_score_generate.py  test_compute_threads_env.py  test_container_model_registry_char_lstm.py  test_container_tokenizer_registry_branch.py  test_conversation_api.py  test_corpus_and_dataset_edges.py  test_corpus_fetcher.py  test_corpus_fetcher_errors.py  test_corpus_fetcher_logging.py  test_corpus_sample_lines_branches.py  test_coverage_gaps.py  test_data_bank_client.py  test_dataset_builder.py  test_default_hooks_coverage.py  test_device_auto.py  test_error_handler_request_id.py  test_exception_handlers.py  test_gpt2_backend_impl_branches.py  test_gpt2_backend_impl_edges.py  test_gpt2_io_edges.py  test_gpt2_io_factory_and_maxlen.py  test_gpt2_prepare_and_backend_impl.py  test_gpt2_score_generate.py  test_guard_checks.py  test_health_endpoints.py  test_health_readyz_branches.py  test_inference_api.py  test_orchestrator_payload_user_id.py  test_orchestrators_corpus_file_id_empty.py  test_redis_retry.py  test_redis_utils_retry.py  test_registries.py  (+55 more)
services/covenant-radar-api/: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
services/covenant-radar-api/docs/: api.md
services/covenant-radar-api/models/: covenant_model_0b21dcbb.ubj  covenant_model_0f37c895.ubj  covenant_model_100d38ce.ubj  covenant_model_20251211_075328_12a324bb.ubj  covenant_model_20251211_093813_d5a9e504.ubj  covenant_model_3669244d.ubj  covenant_model_46f066ec.ubj  covenant_model_49f25160.ubj  covenant_model_58bfe652.ubj  covenant_model_5f38325c.ubj  covenant_model_6417d96c.ubj  covenant_model_8817cf71.ubj  (+6 more)
services/handwriting-ai/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml
services/music-wrapped-api/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
(+1363 files in other folders)
