[tool.poetry]
name = "discord-club-bot"
version = "0.1.0"
description = "Discord bot LVP with QR code generation via slash commands"
authors = ["Austin Wagner <austinwagner@msn.com>"]
readme = "README.md"
packages = [
  { include = "clubbot", from = "src" },
  { include = "scripts" },
]
include = ["src/clubbot/py.typed"]

[tool.poetry.dependencies]
python = "^3.11"
"discord.py" = "^2.4.0"
Pillow = "^10.1.0"
python-dotenv = "^1.0.0"
rich = "^13.7.1"
httpx = "^0.28"
redis = "^7.1"
rq = "^2.3"
monorepo-guards = { path = "../../libs/monorepo_guards", develop = true }
platform-core = { path = "../../libs/platform_core", develop = true }
platform-discord = { path = "../../libs/platform_discord", develop = true }
platform-workers = { path = "../../libs/platform_workers", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
pytest-xdist = "^3.6.1"
ruff = "^0.14.4"
mypy = "^1.13.0"
types-Pillow = "^10.2.0.20240822"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration (linter + formatter)
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "scripts", "tests"]
exclude = [".venv"]

[tool.ruff.lint]
select = [
  "E","F","I","B","BLE","UP","N","C4","SIM","RET","C90","RUF","ANN"
]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
mypy-init-return = true

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Any" = { msg = "Do not use typing.Any; prefer precise types or Protocols/TypedDicts." }
"typing.cast" = { msg = "Do not use typing.cast; prefer adapters or precise types." }
"typing.TypeAlias" = { msg = "Do not use TypeAlias; use Literal types or expand unions explicitly." }

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
no_implicit_optional = true
check_untyped_defs = true
no_implicit_reexport = true
show_error_codes = true
pretty = true
files = ["src", "tests", "scripts"]
mypy_path = ["src"]
explicit_package_bases = true

[tool.coverage.run]
source = ["src", "scripts"]
omit = []
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 100

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v -n auto --dist loadscope -p no:cacheprovider"
filterwarnings = [
  "ignore:'audioop' is deprecated:DeprecationWarning:discord.player",
]
