[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "instrument-io"
version = "0.1.0"
description = "Strictly typed IO for analytical chemistry instrument data formats"
authors = ["Austin Wagner <austinwagner@msn.com>"]
packages = [
  { include = "instrument_io", from = "src" },
  { include = "scripts" },
]
include = ["src/instrument_io/py.typed"]

[tool.poetry.dependencies]
python = "^3.11"
platform-core = {path = "../platform_core", develop = true}
rainbow-api = "^1.0.0"
pyteomics = "^4.6"
pyimzml = "^1.5.5"
openpyxl = "^3.1.0"
polars = {version = "^1.0.0", extras = ["calamine"]}
pdfplumber = "^0.11.8"
python-docx = "^1.1.2"
python-pptx = "^1.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.3.0"
pytest-timeout = "^2.3.1"
pytest-xdist = "^3.6.1"
pytest-cov = "^7.0.0"
mypy = "^1.13.0"
ruff = "^0.14.4"
rich = "^14.2.0"
scipy = "^1.16.3"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
no_implicit_reexport = true
show_error_codes = true
pretty = true
files = ["src", "tests", "scripts"]
mypy_path = ["src"]
explicit_package_bases = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]
exclude = [".venv"]

[tool.ruff.lint]
select = [
    "E","F","I","B","BLE","UP","N","C4","SIM","RET","C90","RUF","ANN"
]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
mypy-init-return = true

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Any" = { msg = "Do not use typing.Any; prefer precise types or Protocols/TypedDicts." }
"typing.cast" = { msg = "Do not use typing.cast; prefer adapters or precise types." }

[tool.coverage.run]
source = ["src", "scripts"]
omit = []
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 100

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v -n auto --dist loadscope"
timeout = 60
timeout_method = "thread"
