[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "platform-discord"
version = "0.1.0"
description = "Strict, typed Discord platform helpers (subscriber wiring)."
authors = ["Austin Wagner <austinwagner@msn.com>"]
packages = [
  { include = "platform_discord", from = "src" },
  { include = "scripts" },
]
readme = "README.md"
include = ["src/platform_discord/py.typed"]

[tool.poetry.dependencies]
python = "^3.11"
platform-workers = { path = "../platform_workers", develop = true }
"discord.py" = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-xdist = "^3.6.1"
pytest-cov = "^7.0.0"
pytest-asyncio = "^1.3.0"
mypy = "^1.13.0"
ruff = "^0.14.4"
black = "^25.11.0"
redis = "^5.2.0"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
no_implicit_reexport = true
show_error_codes = true
pretty = true
files = ["src", "tests", "scripts"]
mypy_path = ["src"]
explicit_package_bases = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]
exclude = [".venv", "typings"]

[tool.ruff.lint]
select = [
  "E","F","I","B","BLE","UP","N","C4","SIM","RET","C90","RUF","ANN"
]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Any" = { msg = "Do not use typing.Any; prefer precise types or Protocols/TypedDicts." }
"typing.cast" = { msg = "Do not use typing.cast; prefer adapters or precise types." }

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
mypy-init-return = true

[tool.coverage.run]
source = ["src", "scripts"]
omit = []
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 100

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v -n auto --dist loadscope"
filterwarnings = [
    "ignore:'audioop' is deprecated:DeprecationWarning:discord.player",
]
