[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "model-trainer-server"
version = "0.1.0"
description = "Model Trainer API and worker (CPU-first, strict typing, RQ)"
authors = ["Austin Wagner <austinwagner@msn.com>"]
packages = [
  { include = "model_trainer", from = "src" }
]
include = ["src/model_trainer/py.typed"]

[[tool.poetry.source]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.121.1"
hypercorn = "^0.18.0"
redis = "^5.2.0"
rq = "^2.0.0"
python-json-logger = "^3.2.1"
typing-extensions = "^4.12.2"
transformers = "^4.45.0"
datasets = "^3.0.1"
tokenizers = "^0.20.0"
httpx = "^0.28.1"
torch = {version = "^2.5", source = "pytorch-cu124"}
platform-core = { path = "../../libs/platform_core", develop = true }
platform-workers = { path = "../../libs/platform_workers", develop = true }
platform-ml = { path = "../../libs/platform_ml", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.3.0"
pytest-timeout = "^2.3.1"
mypy = "^1.13.0"
ruff = "^0.14.4"
black = "^25.11.0"
types-redis = "^4.6.0.20241004"
fakeredis = {version = "^2.21.3", extras = ["lua"]}
pytest-cov = "^7.0.0"
pytest-xdist = "^3.6.1"

[tool.poetry.scripts]
modeltrainer-rq-worker = "model_trainer.worker.worker_entry:main"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
no_implicit_reexport = true
show_error_codes = true
pretty = true
files = ["src", "tests", "scripts"]
mypy_path = ["src"]
explicit_package_bases = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]
exclude = [".venv"]

[tool.ruff.lint]
select = [
    "E","F","I","B","BLE","UP","N","C4","SIM","RET","C90","RUF","ANN"
]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
mypy-init-return = true

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Any" = { msg = "Do not use typing.Any; prefer precise types or Protocols/TypedDicts." }
"typing.cast" = { msg = "Do not use typing.cast; prefer adapters or precise types." }

[tool.coverage.run]
source = ["src", "scripts"]
omit = []
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 100

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v -n auto --dist loadscope"
timeout = 60
timeout_method = "thread"
