[build-system]
requires = ["poetry-core>=1.3.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "covenant-radar-api"
version = "0.1.0"
description = "Loan covenant monitoring and breach prediction API"
authors = ["Austin Wagner <austinwagner@msn.com>"]
packages = [
  { include = "covenant_radar_api", from = "src" },
  { include = "scripts" }
]
readme = "README.md"
include = ["src/covenant_radar_api/py.typed"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.124"
hypercorn = "^0.18"
redis = "^7.1"
rq = "^2.3"
psycopg = {version = "^3.3", extras = ["binary", "pool"]}
httpx = "^0.28"
xgboost = "^3.1"
numpy = "^2.3"
scikit-learn = "^1.7"

# Monorepo libs
platform-core = { path = "../../libs/platform_core", develop = true }
platform-workers = { path = "../../libs/platform_workers", develop = true }
platform-ml = { path = "../../libs/platform_ml", develop = true }
covenant-domain = { path = "../../libs/covenant_domain", develop = true }
covenant-ml = { path = "../../libs/covenant_ml", develop = true }
covenant-persistence = { path = "../../libs/covenant_persistence", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.3.0"
pytest-timeout = "^2.3.1"
mypy = "^1.13.0"
ruff = "^0.14.4"
fakeredis = {version = "^2.26", extras = ["lua"]}
pytest-cov = "^7.0.0"
pytest-xdist = "^3.6.1"
typing-extensions = "^4.12.0"

[tool.poetry.scripts]
covenant-rq-worker = "covenant_radar_api.worker.worker_entry:main"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
no_implicit_reexport = true
show_error_codes = true
pretty = true
files = ["src", "tests", "scripts"]
mypy_path = ["src"]
explicit_package_bases = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]
exclude = [".venv", "typings"]

[tool.ruff.lint]
select = [
    "E","F","I","B","BLE","UP","N","C4","SIM","RET","C90","RUF","ANN"
]
ignore = []
fixable = ["ALL"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Any" = { msg = "Do not use typing.Any; prefer precise types or Protocols/TypedDicts." }
"typing.cast" = { msg = "Do not use typing.cast; prefer adapters or precise types." }
"typing.TypeAlias" = { msg = "Do not use TypeAlias; use Literal types or expand unions explicitly." }

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
mypy-init-return = true

[tool.coverage.run]
source = ["src", "scripts"]
omit = []
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
fail_under = 100

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v -n auto --dist loadscope"
timeout = 60
timeout_method = "thread"
